########################################################################
# Nanociv - Copyright (C) 2020 - Vladimir Davidovich
########################################################################

add_subdirectory(dependencies)

function(gen_tolua dir nam)
  add_custom_command(
      COMMAND fc_tolua -n ${nam} -o ${dir}/tolua_${nam}_gen.c -H ${dir}/tolua_${nam}_gen.h ${dir}/tolua_${nam}.pkg
      OUTPUT ${dir}/tolua_${nam}_gen.c ${dir}/tolua_${nam}_gen.h
      DEPENDS fc_tolua ${dir}/tolua_${nam}.pkg
      WORKING_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}
    )
endfunction()

if(CMAKE_SYSTEM_NAME STREQUAL CMAKE_HOST_SYSTEM_NAME)
  gen_tolua(${CMAKE_CURRENT_SOURCE_DIR}/common/scriptcore common_a)
  gen_tolua(${CMAKE_CURRENT_SOURCE_DIR}/common/scriptcore common_z)
  gen_tolua(${CMAKE_CURRENT_SOURCE_DIR}/common/scriptcore game)
  gen_tolua(${CMAKE_CURRENT_SOURCE_DIR}/common/scriptcore signal)
  gen_tolua(${CMAKE_CURRENT_SOURCE_DIR}/client/luascript client)
  gen_tolua(${CMAKE_CURRENT_SOURCE_DIR}/server/scripting fcdb)
  gen_tolua(${CMAKE_CURRENT_SOURCE_DIR}/server/scripting server)
endif()

add_custom_command(
  COMMAND
    ${PYTHON_EXECUTABLE} common/generate_packets.py
  OUTPUT
    ${CMAKE_CURRENT_SOURCE_DIR}/common/packets_gen.c 
    ${CMAKE_CURRENT_SOURCE_DIR}/common/packets_gen.h
    ${CMAKE_CURRENT_SOURCE_DIR}/client/packhand_gen.c
    ${CMAKE_CURRENT_SOURCE_DIR}/client/packhand_gen.h
    ${CMAKE_CURRENT_SOURCE_DIR}/server/hand_gen.c
    ${CMAKE_CURRENT_SOURCE_DIR}/server/hand_gen.h
  DEPENDS
    common/generate_packets.py
    common/packets.def
  WORKING_DIRECTORY
    ${CMAKE_CURRENT_SOURCE_DIR}
  )

add_custom_command(
  COMMAND
    ${PYTHON_EXECUTABLE} utility/generate_specenum.py
  OUTPUT
    ${CMAKE_CURRENT_SOURCE_DIR}/utility/specenum_gen.h
  DEPENDS
    utility/generate_specenum.py
  WORKING_DIRECTORY
    ${CMAKE_CURRENT_SOURCE_DIR}
  )

set(FC_COMPILE_OPTIONS 
  PUBLIC
    -DNANOCIV_TLS=_Thread_local
    -Wno-tautological-compare 
  PRIVATE 
    -fno-ms-compatibility
    -Wno-string-plus-int 
    -Wno-unused-variable 
    -Wno-incompatible-pointer-types-discards-qualifiers 
    -Wno-format-security 
    -Wno-macro-redefined 
    -Wno-unused-function 
    -Wno-c++11-narrowing
  )

add_library(fc_common STATIC)
target_link_libraries(fc_common PUBLIC nanolib)
target_include_directories(fc_common PUBLIC 
    ${CMAKE_CURRENT_SOURCE_DIR}/common
    ${CMAKE_CURRENT_SOURCE_DIR}/common/aicore
    ${CMAKE_CURRENT_SOURCE_DIR}/common/scriptcore
    ${CMAKE_CURRENT_SOURCE_DIR}/utility
    ${CMAKE_CURRENT_SOURCE_DIR}/gen_headers
    ${CMAKE_CURRENT_SOURCE_DIR}/dependencies/tolua-5.2/include
    ${CMAKE_CURRENT_SOURCE_DIR}/dependencies/lua-5.3/src
    ${CMAKE_CURRENT_SOURCE_DIR}/dependencies/cvercmp
  )
target_compile_options(fc_common ${FC_COMPILE_OPTIONS})
target_sources(fc_common PRIVATE
    gen_headers/fc_config.h
    gen_headers/freeciv_config.h
    common/aicore/aisupport.c
    common/aicore/aisupport.h
    common/aicore/caravan.c
    common/aicore/caravan.h
    common/aicore/citymap.c
    common/aicore/citymap.h
    common/aicore/cm.c
    common/aicore/cm.h
    common/aicore/path_finding.c
    common/aicore/path_finding.h
    common/aicore/pf_tools.c
    common/aicore/pf_tools.h
    common/scriptcore/api_common_intl.c
    common/scriptcore/api_common_intl.h
    common/scriptcore/api_common_utilities.c
    common/scriptcore/api_common_utilities.h
    common/scriptcore/api_game_effects.c
    common/scriptcore/api_game_effects.h
    common/scriptcore/api_game_find.c
    common/scriptcore/api_game_find.h
    common/scriptcore/api_game_methods.c
    common/scriptcore/api_game_methods.h
    common/scriptcore/api_game_specenum.c
    common/scriptcore/api_game_specenum.h
    common/scriptcore/api_signal_base.c
    common/scriptcore/api_signal_base.h
    common/scriptcore/luascript.c
    common/scriptcore/luascript.h
    common/scriptcore/luascript_func.c
    common/scriptcore/luascript_func.h
    common/scriptcore/luascript_signal.c
    common/scriptcore/luascript_signal.h
    common/scriptcore/luascript_types.h
    common/scriptcore/tolua_common_a_gen.c
    common/scriptcore/tolua_common_a_gen.h
    common/scriptcore/tolua_common_z_gen.c
    common/scriptcore/tolua_common_z_gen.h
    common/scriptcore/tolua_game_gen.c
    common/scriptcore/tolua_game_gen.h
    common/scriptcore/tolua_signal_gen.c
    common/scriptcore/tolua_signal_gen.h
    common/achievements.c
    common/achievements.h
    common/actions.c
    common/actions.h
    common/ai.c
    common/ai.h
    common/base.c
    common/base.h
    common/borders.c
    common/borders.h
    common/calendar.c
    common/calendar.h
    common/capstr.c
    common/capstr.h
    common/chat.h
    common/citizens.c
    common/citizens.h
    common/city.c
    common/city.h
    common/clientutils.c
    common/clientutils.h
    common/combat.c
    common/combat.h
    common/connection.c
    common/connection.h
    common/culture.c
    common/culture.h
    common/dataio.c
    common/dataio.h
    common/diptreaty.c
    common/diptreaty.h
    common/disaster.c
    common/disaster.h
    common/effects.c
    common/effects.h
    common/events.c
    common/events.h
    common/extras.c
    common/extras.h
    common/fc_cmdhelp.c
    common/fc_cmdhelp.h
    common/fc_interface.c
    common/fc_interface.h
    common/fc_types.h
    common/featured_text.c
    common/featured_text.h
    common/game.c
    common/game.h
    common/government.c
    common/government.h
    common/idex.c
    common/idex.h
    common/improvement.c
    common/improvement.h
    common/map.c
    common/map.h
    common/map_types.h
    common/mapimg.c
    common/mapimg.h
    common/metaknowledge.c
    common/metaknowledge.h
    common/movement.c
    common/movement.h
    common/multipliers.c
    common/multipliers.h
    common/name_translation.h
    common/nation.c
    common/nation.h
    common/packets.c
    common/packets.h
    common/packets_gen.c
    common/packets_gen.h
    common/player.c
    common/player.h
    common/requirements.c
    common/requirements.h
    common/research.c
    common/research.h
    common/rgbcolor.c
    common/rgbcolor.h
    common/road.c
    common/road.h
    common/spaceship.c
    common/spaceship.h
    common/specialist.c
    common/specialist.h
    common/srvdefs.h
    common/style.c
    common/style.h
    common/team.c
    common/team.h
    common/tech.c
    common/tech.h
    common/terrain.c
    common/terrain.h
    common/tile.c
    common/tile.h
    common/traderoutes.c
    common/traderoutes.h
    common/traits.h
    common/unit.c
    common/unit.h
    common/unitlist.c
    common/unitlist.h
    common/unittype.c
    common/unittype.h
    common/version.c
    common/version.h
    common/victory.c
    common/victory.h
    common/vision.c
    common/vision.h
    common/workertask.c
    common/workertask.h
    common/worklist.c
    common/worklist.h
    utility/astring.c
    utility/astring.h
    utility/bitvector.c
    utility/bitvector.h
    utility/capability.c
    utility/capability.h
    utility/deprecations.c
    utility/deprecations.h
    utility/distribute.c
    utility/distribute.h
    utility/fc_cmdline.c
    utility/fc_cmdline.h
    utility/fc_prehdrs.h
    utility/fc_utf8.c
    utility/fc_utf8.h
    utility/fcbacktrace.c
    utility/fcbacktrace.h
    utility/fciconv.c
    utility/fciconv.h
    utility/fcintl.c
    utility/fcintl.h
    utility/fcthread.c
    utility/fcthread.h
    utility/genhash.c
    utility/genhash.h
    utility/genlist.c
    utility/genlist.h
    utility/inputfile.c
    utility/inputfile.h
    utility/ioz.c
    utility/ioz.h
    utility/iterator.c
    utility/iterator.h
    utility/log.c
    utility/log.h
    utility/md5.c
    utility/md5.h
    utility/mem.c
    utility/mem.h
    utility/net_types.h
    utility/netfile.c
    utility/netfile.h
    utility/netintf.c
    utility/netintf.h
    utility/rand.c
    utility/rand.h
    utility/randseed.c
    utility/randseed.h
    utility/registry.c
    utility/registry.h
    utility/registry_ini.c
    utility/registry_ini.h
    utility/section_file.c
    utility/section_file.h
    utility/shared.c
    utility/shared.h
    utility/specenum_gen.h
    utility/spechash.h
    utility/speclist.h
    utility/specpq.h
    utility/specvec.h
    utility/string_vector.c
    utility/string_vector.h
    utility/support.c
    utility/support.h
    utility/timing.c
    utility/timing.h
    dependencies/cvercmp/cvercmp.c
    dependencies/cvercmp/cvercmp.h
    dependencies/lua-5.3/src/lapi.c
    dependencies/lua-5.3/src/lapi.h
    dependencies/lua-5.3/src/lauxlib.c
    dependencies/lua-5.3/src/lauxlib.h
    dependencies/lua-5.3/src/lbaselib.c
    dependencies/lua-5.3/src/lbitlib.c
    dependencies/lua-5.3/src/lcode.c
    dependencies/lua-5.3/src/lcode.h
    dependencies/lua-5.3/src/lcorolib.c
    dependencies/lua-5.3/src/lctype.c
    dependencies/lua-5.3/src/lctype.h
    dependencies/lua-5.3/src/ldblib.c
    dependencies/lua-5.3/src/ldebug.c
    dependencies/lua-5.3/src/ldebug.h
    dependencies/lua-5.3/src/ldo.c
    dependencies/lua-5.3/src/ldo.h
    dependencies/lua-5.3/src/ldump.c
    dependencies/lua-5.3/src/lfunc.c
    dependencies/lua-5.3/src/lfunc.h
    dependencies/lua-5.3/src/lgc.c
    dependencies/lua-5.3/src/lgc.h
    dependencies/lua-5.3/src/linit.c
    dependencies/lua-5.3/src/liolib.c
    dependencies/lua-5.3/src/llex.c
    dependencies/lua-5.3/src/llex.h
    dependencies/lua-5.3/src/llimits.h
    dependencies/lua-5.3/src/lmathlib.c
    dependencies/lua-5.3/src/lmem.c
    dependencies/lua-5.3/src/lmem.h
    dependencies/lua-5.3/src/loadlib.c
    dependencies/lua-5.3/src/lobject.c
    dependencies/lua-5.3/src/lobject.h
    dependencies/lua-5.3/src/localluaconf.h
    dependencies/lua-5.3/src/lopcodes.c
    dependencies/lua-5.3/src/lopcodes.h
    dependencies/lua-5.3/src/loslib.c
    dependencies/lua-5.3/src/lparser.c
    dependencies/lua-5.3/src/lparser.h
    dependencies/lua-5.3/src/lprefix.h
    dependencies/lua-5.3/src/lstate.c
    dependencies/lua-5.3/src/lstate.h
    dependencies/lua-5.3/src/lstring.c
    dependencies/lua-5.3/src/lstring.h
    dependencies/lua-5.3/src/lstrlib.c
    dependencies/lua-5.3/src/ltable.c
    dependencies/lua-5.3/src/ltable.h
    dependencies/lua-5.3/src/ltablib.c
    dependencies/lua-5.3/src/ltm.c
    dependencies/lua-5.3/src/ltm.h
    dependencies/lua-5.3/src/lua.h
    dependencies/lua-5.3/src/luaconf.h
    dependencies/lua-5.3/src/lualib.h
    dependencies/lua-5.3/src/lundump.c
    dependencies/lua-5.3/src/lundump.h
    dependencies/lua-5.3/src/lutf8lib.c
    dependencies/lua-5.3/src/lvm.c
    dependencies/lua-5.3/src/lvm.h
    dependencies/lua-5.3/src/lzio.c
    dependencies/lua-5.3/src/lzio.h
    dependencies/tolua-5.2/include/tolua.h
    dependencies/tolua-5.2/src/lib/tolua_event.c
    dependencies/tolua-5.2/src/lib/tolua_event.h
    dependencies/tolua-5.2/src/lib/tolua_is.c
    dependencies/tolua-5.2/src/lib/tolua_map.c
    dependencies/tolua-5.2/src/lib/tolua_push.c
    dependencies/tolua-5.2/src/lib/tolua_to.c
  )

add_library(fc_client STATIC)
target_link_libraries(fc_client PUBLIC fc_common)
target_include_directories(fc_client PUBLIC 
    ${CMAKE_CURRENT_SOURCE_DIR}/client
    ${CMAKE_CURRENT_SOURCE_DIR}/client/agents
    ${CMAKE_CURRENT_SOURCE_DIR}/client/include
    ${CMAKE_CURRENT_SOURCE_DIR}/client/luascript
  )
target_compile_options(fc_client ${FC_COMPILE_OPTIONS})
target_sources(fc_client PRIVATE
    client/agents/agents.c
    client/agents/agents.h
    client/agents/cma_core.c
    client/agents/cma_core.h
    client/agents/cma_fec.c
    client/agents/cma_fec.h
    client/agents/sha.c
    client/agents/sha.h
    client/include/canvas_g.h
    client/include/chatline_g.h
    client/include/citydlg_g.h
    client/include/cityrep_g.h
    client/include/colors_g.h
    client/include/connectdlg_g.h
    client/include/dialogs_g.h
    client/include/diplodlg_g.h
    client/include/editgui_g.h
    client/include/finddlg_g.h
    client/include/gotodlg_g.h
    client/include/graphics_g.h
    client/include/gui_main_g.h
    client/include/gui_proto_constructor.h
    client/include/helpdlg_g.h
    client/include/inteldlg_g.h
    client/include/luaconsole_g.h
    client/include/mapctrl_g.h
    client/include/mapview_g.h
    client/include/menu_g.h
    client/include/messagedlg_g.h
    client/include/messagewin_g.h
    client/include/optiondlg_g.h
    client/include/pages_g.h
    client/include/plrdlg_g.h
    client/include/ratesdlg_g.h
    client/include/repodlgs_g.h
    client/include/spaceshipdlg_g.h
    client/include/sprite_g.h
    client/include/themes_g.h
    client/include/voteinfo_bar_g.h
    client/include/wldlg_g.h
    client/luascript/api_client_base.c
    client/luascript/api_client_base.h
    client/luascript/script_client.c
    client/luascript/script_client.h
    client/luascript/tolua_client_gen.c
    client/luascript/tolua_client_gen.h
    client/attribute.c
    client/attribute.h
    client/audio.c
    client/audio.h
    client/audio_none.c
    client/audio_none.h
    client/chatline_common.c
    client/chatline_common.h
    client/citydlg_common.c
    client/citydlg_common.h
    client/cityrepdata.c
    client/cityrepdata.h
    client/client_main.c
    client/client_main.h
    client/climap.c
    client/climap.h
    client/climisc.c
    client/climisc.h
    client/clinet.c
    client/clinet.h
    client/colors_common.c
    client/colors_common.h
    client/connectdlg_common.c
    client/connectdlg_common.h
    client/control.c
    client/control.h
    client/editor.c
    client/editor.h
    client/global_worklist.c
    client/global_worklist.h
    client/goto.c
    client/goto.h
    client/helpdata.c
    client/helpdata.h
    client/luaconsole_common.c
    client/luaconsole_common.h
    client/mapctrl_common.c
    client/mapctrl_common.h
    client/mapview_common.c
    client/mapview_common.h
    client/messagewin_common.c
    client/messagewin_common.h
    client/music.c
    client/music.h
    client/options.c
    client/options.h
    client/overview_common.c
    client/overview_common.h
    client/packhand.c
    client/packhand.h
    client/packhand_gen.c
    client/packhand_gen.h
    client/plrdlg_common.c
    client/plrdlg_common.h
    client/repodlgs_common.c
    client/repodlgs_common.h
    client/reqtree.c
    client/reqtree.h
    client/servers.c
    client/servers.h
    client/text.c
    client/text.h
    client/themes_common.c
    client/themes_common.h
    client/tilespec.c
    client/tilespec.h
    client/unitselect_common.c
    client/unitselect_common.h
    client/update_queue.c
    client/update_queue.h
    client/voteinfo.c
    client/voteinfo.h
    client/zoom.c
    client/zoom.h
  )

add_library(fc_server STATIC)
target_link_libraries(fc_server PUBLIC fc_common)
target_include_directories(fc_server PUBLIC 
    ${CMAKE_CURRENT_SOURCE_DIR}/ai
    ${CMAKE_CURRENT_SOURCE_DIR}/ai/classic
    ${CMAKE_CURRENT_SOURCE_DIR}/ai/default
    ${CMAKE_CURRENT_SOURCE_DIR}/server
    ${CMAKE_CURRENT_SOURCE_DIR}/server/advisors
    ${CMAKE_CURRENT_SOURCE_DIR}/server/generator
    ${CMAKE_CURRENT_SOURCE_DIR}/server/scripting
  )
if(MSVC)  
target_link_options(fc_server PUBLIC
    "/ignore:4217"
  )
endif()  
target_compile_definitions(fc_server PRIVATE
    exit=fc_thread_exit
    handle_player_attribute_chunk=handle_player_attribute_chunk_srv
    handle_edit_startpos=handle_edit_startpos_srv
    handle_edit_startpos_full=handle_edit_startpos_full_srv
    handle_worker_task=handle_worker_task_srv
  )
target_compile_options(fc_server ${FC_COMPILE_OPTIONS})
target_sources(fc_server PRIVATE
    ai/classic/classicai.c
    ai/classic/classicai.h
    ai/default/aiair.c
    ai/default/aiair.h
    ai/default/aicity.c
    ai/default/aicity.h
    ai/default/aidata.c
    ai/default/aidata.h
    ai/default/aidiplomat.c
    ai/default/aidiplomat.h
    ai/default/aiferry.c
    ai/default/aiferry.h
    ai/default/aiguard.c
    ai/default/aiguard.h
    ai/default/aihand.c
    ai/default/aihand.h
    ai/default/aihunt.c
    ai/default/aihunt.h
    ai/default/ailog.c
    ai/default/ailog.h
    ai/default/aiparatrooper.c
    ai/default/aiparatrooper.h
    ai/default/aiplayer.c
    ai/default/aiplayer.h
    ai/default/aisettler.c
    ai/default/aisettler.h
    ai/default/aitech.c
    ai/default/aitech.h
    ai/default/aitools.c
    ai/default/aitools.h
    ai/default/aiunit.c
    ai/default/aiunit.h
    ai/default/daidiplomacy.c
    ai/default/daidiplomacy.h
    ai/default/daidomestic.c
    ai/default/daidomestic.h
    ai/default/daieffects.c
    ai/default/daieffects.h
    ai/default/daimilitary.c
    ai/default/daimilitary.h
    ai/stub/stubai.c
    ai/aitraits.c
    ai/aitraits.h
    ai/difficulty.c
    ai/difficulty.h
    ai/handicaps.c
    ai/handicaps.h
    server/advisors/advbuilding.c
    server/advisors/advbuilding.h
    server/advisors/advchoice.c
    server/advisors/advchoice.h
    server/advisors/advcity.c
    server/advisors/advcity.h
    server/advisors/advdata.c
    server/advisors/advdata.h
    server/advisors/advgoto.c
    server/advisors/advgoto.h
    server/advisors/advruleset.c
    server/advisors/advruleset.h
    server/advisors/advspace.c
    server/advisors/advspace.h
    server/advisors/advtools.c
    server/advisors/advtools.h
    server/advisors/autoexplorer.c
    server/advisors/autoexplorer.h
    server/advisors/autosettlers.c
    server/advisors/autosettlers.h
    server/advisors/infracache.c
    server/advisors/infracache.h
    server/generator/height_map.c
    server/generator/height_map.h
    server/generator/mapgen.c
    server/generator/mapgen.h
    server/generator/mapgen_topology.c
    server/generator/mapgen_topology.h
    server/generator/startpos.c
    server/generator/startpos.h
    server/generator/temperature_map.c
    server/generator/temperature_map.h
    server/generator/utilities.c
    server/generator/utilities.h
    server/scripting/api_fcdb_auth.c
    server/scripting/api_fcdb_auth.h
    server/scripting/api_fcdb_base.c
    server/scripting/api_fcdb_base.h
    server/scripting/api_server_base.c
    server/scripting/api_server_base.h
    server/scripting/api_server_edit.c
    server/scripting/api_server_edit.h
    server/scripting/api_server_game_methods.c
    server/scripting/api_server_game_methods.h
    server/scripting/api_server_notify.c
    server/scripting/api_server_notify.h
    server/scripting/script_fcdb.c
    server/scripting/script_fcdb.h
    server/scripting/script_server.c
    server/scripting/script_server.h
    server/scripting/tolua_fcdb_gen.c
    server/scripting/tolua_fcdb_gen.h
    server/scripting/tolua_server_gen.c
    server/scripting/tolua_server_gen.h
    server/actiontools.c
    server/actiontools.h
    server/aiiface.c
    server/aiiface.h
    server/animals.c
    server/animals.h
    server/auth.c
    server/auth.h
    server/barbarian.c
    server/barbarian.h
    server/citizenshand.c
    server/citizenshand.h
    server/cityhand.c
    server/cityhand.h
    server/citytools.c
    server/citytools.h
    server/cityturn.c
    server/cityturn.h
    server/civserver.c
    server/commands.c
    server/commands.h
    server/connecthand.c
    server/connecthand.h
    server/console.c
    server/console.h
    server/diplhand.c
    server/diplhand.h
    server/diplomats.c
    server/diplomats.h
    server/edithand.c
    server/edithand.h
    server/fcdb.c
    server/fcdb.h
    server/gamehand.c
    server/gamehand.h
    server/hand_gen.c
    server/hand_gen.h
    server/handchat.c
    server/handchat.h
    server/maphand.c
    server/maphand.h
    server/meta.c
    server/meta.h
    server/mood.c
    server/mood.h
    server/notify.c
    server/notify.h
    server/plrhand.c
    server/plrhand.h
    server/report.c
    server/report.h
    server/rssanity.c
    server/rssanity.h
    server/ruleset.c
    server/ruleset.h
    server/savecompat.c
    server/savecompat.h
    server/savegame.c
    server/savegame.h
    server/savegame2.c
    server/savegame2.h
    server/score.c
    server/score.h
    server/sernet.c
    server/sernet.h
    server/settings.c
    server/settings.h
    server/spacerace.c
    server/spacerace.h
    server/srv_log.c
    server/srv_log.h
    server/srv_main.c
    server/srv_main.h
    server/stdinhand.c
    server/stdinhand.h
    server/techtools.c
    server/techtools.h
    server/unithand.c
    server/unithand.h
    server/unittools.c
    server/unittools.h
    server/voting.c
    server/voting.h
  )
